# yew-have-ligma

./: .dockerignore  .gitignore  Cargo.toml  LEARNINGS.md  index.html  run-client  run-client2  rust.Dockerfile  rust.cheat.Dockerfile  rust.client.Dockerfile  ts.Dockerfile
final-2/: rs.1.25000.100  rs.1.25000.200  rs.1.25000.50  rs.1.25000.500  rs.10.25000.100  rs.10.25000.200  rs.10.25000.50  rs.10.25000.500  rs.3.25000.100  rs.3.25000.200  rs.3.25000.50  rs.3.25000.500  rs.5.25000.100  rs.5.25000.200  rs.5.25000.50  rs.5.25000.500  ts.1.25000.100  ts.1.25000.200  ts.1.25000.50  ts.1.25000.500  ts.10.25000.100  ts.10.25000.200  ts.10.25000.50  ts.10.25000.500  ts.3.25000.100  ts.3.25000.200  ts.3.25000.50  ts.3.25000.500  ts.5.25000.100  ts.5.25000.200  ts.5.25000.50  ts.5.25000.500
phx-rocks/: Dockerfile  README.md  add.exs  mix.exs
phx-rocks/assets/js/: app.js
phx-rocks/config/: config.exs  dev.exs  runtime.exs  test.exs
phx-rocks/lib/app/: application.ex
phx-rocks/lib/app_web/: endpoint.ex  router.ex  telemetry.ex
phx-rocks/lib/app_web/controllers/: item_controller.ex
phx-rocks/lib/app_web/live/: items_live.ex
phx-rocks/lib/app_web/templates/layout/: root.html.heex
phx-rocks/lib/app_web/views/: item_view.ex
phx-rocks/test/support/: channel_case.ex  conn_case.ex
react-sucks/: Makefile  index.html  package-lock.json  package.json  server.js  server.ts  testies.js  testies.ts
react-sucks/src/: App.tsx  main-server.tsx  main.tsx
react-sucks/src/item/: Item.tsx  buffer.ts  item-config.ts
src/: app.rs  buffer.rs  item.rs  lib.rs  main.rs
